<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:textAppearanceMedium"
        android:text="@string/add_todo_item_title" />

    <EditText
        android:id="@+id/task_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_textview"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/task_hint" />

    <TextView
        android:id="@+id/due_date_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/task_edittext"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:textAppearance="?android:textAppearanceSmall"
        android:text="@string/due_date_text" />

    <EditText
        android:id="@+id/due_date_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/due_date_textview"
        android:layout_toEndOf="@id/due_date_textview"
        android:inputType="date"
        android:hint="@string/due_date_hint" />

    <TextView
        android:id="@+id/due_time_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/due_date_textview"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:textAppearance="?android:textAppearanceSmall"
        android:text="@string/due_time_text" />

    <EditText
        android:id="@+id/due_time_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/due_time_textview"
        android:layout_toEndOf="@id/due_time_textview"
        android:inputType="time"
        android:hint="@string/due_time_hint" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/due_time_edittext"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/add_button_text" />

</RelativeLayout>
